--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,33 +7,16 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v5
-      - uses: actions/setup-node@v3
+      - uses: oven-sh/setup-bun@v2
         with:
-          node-version: "20"
-      - name: Install pnpm
-        uses: pnpm/action-setup@v2
-        with:
-          version: 8
-          run_install: false
-      - name: Get pnpm store directory
-        id: pnpm-cache
-        shell: bash
-        run: |
-          echo "STORE_PATH=$(pnpm store path)" >> $GITHUB_OUTPUT
-      - uses: actions/cache@v4
-        name: Setup pnpm cache
-        with:
-          path: ${{ steps.pnpm-cache.outputs.STORE_PATH }}
-          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
-          restore-keys: |
-            ${{ runner.os }}-pnpm-store-
+          bun-version: latest
       - name: Install dependencies
-        run: pnpm install
+        run: bun install
       - run: npx playwright install
       - name: Build
-        run: pnpm run build --base /kotlin-goodies-seajug/
+        run: bun run build --base /kotlin-goodies-seajug/
       - name: Build PDF
-        run: pnpm run export --output dist/index.pdf
+        run: bun run export --output dist/index.pdf
       - name: Deploy pages
         uses: crazy-max/ghaction-github-pages@v3
         with:
